<resources>
    <string name="on">开灯</string>
    <string name="off">关灯</string>
    <string name="slow">慢闪</string>
    <string name="fast">快闪</string>
    <string name="led_control">LED控制</string>
    <string name="car_control">云台控制</string>
    <string name="turn_back">向下</string>
    <string name="turn_right">向右</string>
    <string name="stop_bt">复位</string>
    <string name="turn_left">向左</string>
    <string name="go_forward">向上</string>
    <string name="car_text">小车控制</string>
    <string name="cat_bt1">猫粮50g</string>
    <string name="cat_bt2">猫粮80g</string>
    <string name="cat_bt3">猫粮30g</string>
    <string name="cat_bt4">投喂</string>
    <string name="dog_bt1">狗粮50g</string>
    <string name="dog_bt2">狗粮80g</string>
    <string name="dog_bt3">狗粮30g</string>
    <string name="dog_bt4">投喂</string>
    <string name="num_text">投喂克数</string>
    <string name="modular_control">模块控制</string>
    <string name="engine_turn_left">舵机左转</string>
    <string name="engine_turn_right">舵机右转</string>
    <string name="engine_middle">舵机居中</string>
    <string name="trace_module">启动循迹模块</string>
    <string name="ultrasonic_module">启动超声波避障</string>
    <string name="steer_engine">启动舵机超声波避障</string>
    <string name="colorful_light">Colorful_Light</string>
    <string name="traffic_light">Traffic_Light</string>
    <string name="environment">Environment</string>
    <string name="nfc">NFC</string>
    <string name="all_demo">All_Demo</string>
    <string name="manual_control">manual_control</string>
    <string name="manual_control_module">manual_control_module</string>
    <string name="color_light_module">color_light_module</string>
    <string name="PWM_Control_module">PWM_Control_module</string>
    <string name="Brightness_module">Brightness_module</string>
    <string name="Manual_Control_Module">Manual_Control_Module</string>
    <string name="Colorful_Light_Module">Colorful_Light_Module</string>
    <string name="PWM_Control_Module">PWM_Control_Module</string>
    <string name="Brightness_Module">Brightness_Module</string>
    <string name="Human_Detect_Module">Human_Detect_Module</string>
    <string name="Light_Detect">Light_Detect</string>
    <string name="Union_Detect">Union_Detect</string>
    <string name="Return_Menu">Return_Menu</string>
    <string name="Light_Detect_Module">Light_Detect_Module</string>
    <string name="Union_Detect_Module">Union_Detect_Module</string>
    <string name="Return_Menu_Module">Return_Menu_Module</string>
    <string name="red_on">红灯</string>
    <string name="green_on">绿灯</string>
    <string name="blue_on">蓝灯</string>
    <string name="period_1s">周期1s闪烁</string>
    <string name="period_05s">周期0.5秒闪烁</string>
    <string name="period_025">周期0.25秒闪烁</string>
    <string name="pwm_red">红灯</string>
    <string name="pwm_green">绿灯</string>
    <string name="pwm_blue">蓝灯</string>
    <string name="pwm_purple">紫色</string>
    <string name="pwm_all">三色灯全开</string>
    <string name="bright_low">低亮</string>
    <string name="bright_middle">中亮</string>
    <string name="bright_high">高亮</string>
    <string name="human_detect_start">人体红外检测开始</string>
    <string name="light_detect_start">光照检测开始</string>
    <string name="union_detect_start">联合检测开始</string>
    <string name="Traffic_Manual_Control_Module">Traffic_Manual_Control_Module</string>
    <string name="Traffic_Auto_Module">Traffic_Auto_Module</string>
    <string name="Traffic_Human_Module">Traffic_Human_Module</string>
    <string name="Traffic_Auto_Module_Start">交通灯自动模式1</string>
    <string name="Traffic_Human_Module_Start">交通灯自动模式2</string>
    <string name="Traffic_Human_Module_control">交通灯人工干预模式</string>
    <string name="Traffic_reg">红灯</string>
    <string name="Traffic_yellow">黄灯</string>
    <string name="Traffic_green">绿灯</string>
    <string name="environment_all_value">environment_all_value</string>
    <string name="environment_temperature_value">environment_temperature_value</string>
    <string name="environment_humidity_value">environment_humidity_value</string>
    <string name="environment_gas_value">environment_gas_value</string>
    <string name="environment_return">Return_Menu_Module</string>
    <string name="environment_all">所有传感器值</string>
    <string name="environment_temperature">温度值</string>
    <string name="environment_humidity">湿度值</string>
    <string name="environment_gas">可燃气体值</string>
    <string name="nfc_wechat_app">nfc_wechat_app</string>
    <string name="nfc_today_headline_app">nfc_today_headline_app</string>
    <string name="nfc_taobao_app">nfc_taobao_app</string>
    <string name="nfc_huawei_smart_lift_app">nfc_huawei_smart_lift_app</string>
    <string name="nfc_histreaming_app">nfc_histreaming_app</string>
    <string name="nfc_return">Return_Menu_Module</string>
    <string name="nfc_wechat">打开微信</string>
    <string name="nfc_today_headline">打开今日头条</string>
    <string name="nfc_taobao">打开淘宝</string>
    <string name="nfc_huawei_smart_lift">打开华为智慧生活</string>
    <string name="nfc_histreaming">打开histreaming</string>
    <string name="colorful_return_main_menu">炫彩灯返回主菜单</string>
    <string name="traffic_return_main_menu">交通灯返回主菜单_</string>
    <string name="environment_return_main_menu">环境监测返回主菜单</string>
    <string name="nfc_return_main_menu">NFC返回主菜单</string>
    <string name="led_demo_control">LED灯控制</string>
</resources>
