<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="200px">
        <Button
            android:id="@+id/engine_left_bt"
            android:layout_width="300px"
            android:layout_height="200px"
            android:layout_gravity="center"
            android:text="@string/engine_turn_left"
            />
        <Button
            android:id="@+id/engine_right_bt"
            android:layout_width="300px"
            android:layout_height="200px"
            android:layout_gravity="center"
            android:text="@string/engine_turn_right"
            />
        <Button
            android:id="@+id/engine_middle_bt"
            android:layout_width="300px"
            android:layout_height="200px"
            android:layout_gravity="center"
            android:text="@string/engine_middle"
            />
    </LinearLayout>
    <Button
        android:id="@+id/trace_module_bt"
        android:layout_width="700px"
        android:layout_height="150px"
        android:layout_gravity="center"
        android:text="@string/trace_module"
        />
    <Button
        android:id="@+id/ultrasonic_module_bt"
        android:layout_width="700px"
        android:layout_height="150px"
        android:layout_gravity="center"
        android:text="@string/ultrasonic_module"
        />
    <Button
        android:id="@+id/steer_engine_bt"
        android:layout_width="700px"
        android:layout_height="150px"
        android:layout_gravity="center"
        android:text="@string/steer_engine"
        />


</LinearLayout>